--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "node-kanban",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js",
-    "local": "nodemon --inspect index.js"
+    "start": "node src/index.js",
+    "local": "nodemon --inspect src/index.js"
   },
   "keywords": [],
   "author": "",
