--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "node-kanban",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -12,13 +13,21 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.8.1",
+    "apollo-server-express": "^3.10.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.17.1",
+    "express-session": "^1.17.3",
     "graphql": "^16.5.0",
+    "graphql-passport": "^0.6.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.6",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
