--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_CONNECTION_STRING='mongodb+srv://admin:63SVJDMOEfQbRzIB@cluster0.f0znm.mongodb.net/TODO'
+MONGO_CONNECTION_STRING=mongodb+srv://admin:63SVJDMOEfQbRzIB@cluster0.f0znm.mongodb.net/TODO
