--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "local": "nodemon --inspect src/index.js"
+    "local": "nodemon  src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^9.0.4",
     "apollo-server": "^3.8.1",
+    "apollo-server-core": "^3.10.2",
     "apollo-server-express": "^3.10.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -24,10 +26,13 @@
     "express-session": "^1.17.3",
     "graphql": "^16.5.0",
     "graphql-passport": "^0.6.4",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.11.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.6",
     "morgan": "^1.10.0",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "ws": "^8.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
